--- a/Resources/Prototypes/DeltaV/Species/vulpkanin.yml
+++ b/Resources/Prototypes/DeltaV/Species/vulpkanin.yml
@@ -45,20 +45,23 @@
     FacialHair:
       points: 1
       required: false
-    Tail:
+    Face:
+      points: 6
+      required: false
+    Head:
+      points: 2
+      required: false
+    HeadTop:
       points: 1
       required: true
-      defaultMarkings: [ VulpTail ]
-    RightLeg:
-      points: 6
+      defaultMarkings: [ VulpEar ]
+    HeadSide:
+      points: 4
       required: false
-    RightFoot:
-      points: 6
+    Snout:
+      points: 1
       required: false
-    LeftLeg:
-      points: 6
-      required: false
-    LeftFoot:
+    Chest:
       points: 6
       required: false
     RightArm:
@@ -73,16 +76,28 @@
     LeftHand:
       points: 6
       required: false
-    Snout:
-      points: 1
-      required: false
-    HeadTop:
-      points: 1
-      required: true
-      defaultMarkings: [ VulpEar ]
-    HeadSide:
+    RightLeg:
       points: 6
       required: false
+    RightFoot:
+      points: 6
+      required: false
+    LeftLeg:
+      points: 6
+      required: false
+    LeftFoot:
+      points: 6
+      required: false
+    Underwear:
+      points: 1
+      required: false
+    Undershirt:
+      points: 1
+      required: false
+    Tail:
+      points: 1
+      required: true
+      defaultMarkings: [ VulpTail ]
 
 - type: humanoidBaseSprite
   id: MobVulpkaninHead
