--- a/Resources/Prototypes/Species/human.yml
+++ b/Resources/Prototypes/Species/human.yml
@@ -43,20 +43,17 @@
 - type: markingPoints
   id: MobHumanMarkingLimits
   points:
-    Head:
-      points: 2
-      required: false
     Hair:
       points: 1
       required: false
     FacialHair:
       points: 1
       required: false
-    Snout:
-      points: 1
+    Face:
+      points: 6
       required: false
-    Tail:
-      points: 1
+    Head:
+      points: 2
       required: false
     HeadTop:
       points: 1
@@ -64,25 +61,10 @@
     HeadSide:
       points: 4
       required: false
+    Snout:
+      points: 1
+      required: false
     Chest:
-      points: 6
-      required: false
-    Underwear:
-      points: 1
-      required: false
-    Undershirt:
-      points: 1
-      required: false
-    RightLeg:
-      points: 6
-      required: false
-    RightFoot:
-      points: 6
-      required: false
-    LeftLeg:
-      points: 6
-      required: false
-    LeftFoot:
       points: 6
       required: false
     RightArm:
@@ -96,6 +78,27 @@
       required: false
     LeftHand:
       points: 6
+      required: false
+    RightLeg:
+      points: 6
+      required: false
+    RightFoot:
+      points: 6
+      required: false
+    LeftLeg:
+      points: 6
+      required: false
+    LeftFoot:
+      points: 6
+      required: false
+    Underwear:
+      points: 1
+      required: false
+    Undershirt:
+      points: 1
+      required: false
+    Tail:
+      points: 1
       required: false
 
 - type: humanoidBaseSprite
